optimized some function's and define function for displaying  Song's through json data.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body>
@@ -31,24 +32,19 @@
             </div>
             <h2>All Songs</h2>
             <div class="song_list">
-                <!-- <div class="song">hellow hallowern songs</div>
-                
-                <div class="song">hellow hallowern</div>
-                <div class="song">hellow hallowern</div>
-                <div class="song">hellow hallowern</div>
-                <div class="song">hellow hallowern</div> -->
+                <!-- From D.O.M Manupulation. -->
             </div>
         </div>
         <div class="song_display">
             <div class="song_card">
-                <div class="song_img">
+                <!-- <div class="song_img">
                     <img src="https://picsum.photos/800/500" alt="">
                 </div>
                 <div class="song_title">Here Comes Song Title.</div>
-                <div class="song_artist">Atrist Name</div>
+                <div class="song_artist">Atrist Name</div> -->
             </div>
             <div class="player">
-                <audio src="demo.mp3" controls></audio>
+                <!-- <audio src="./music/mirchi rap.mp3" controls></audio> -->
             </div>
             <div class="player_ctrl">
                 <button> &lArr; </button>
