Logic related to nextSong and prevSong button done.

--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
                 <!-- <audio src="./music/mirchi rap.mp3" controls></audio> -->
             </div>
             <div class="player_ctrl">
-                <button> &lArr; </button>
-                <button> &rArr; </button> <br>
-                <!-- <div class="playlist"> -->
-                <button style="font-size: 0.8rem; text-align: center; margin-top: 10px;">Add to <br> Playlist</button>
-                <!-- </div> -->
+                <button onclick="leftPrint()"> &lArr; </button>
+                <button onclick="rightPrint()" > &rArr; </button> <br>
+                <button class="addPlaylist">Add to <br> Playlist</button>
             </div>
         </div>
         <div class="playlist_box">
